--- a/index.html
+++ b/index.html
@@ -14,19 +14,43 @@
     <link rel="stylesheet" href="scss/all.css">
 </head>
 <body>
-    <div class="header">
-        <a href="#" class="btn btn-primary">test</a>
-    </div>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="hd_container d-flex justify-content-between align-items-center">
+            <h1 class="mb-0"><a href="index.html"><img src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a></h1>
+            <ul class="list-unstyled pc-menu d-flex justify-content-between align-items-center mb-0">
+                <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
+                <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
+                <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
+                <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
+            </ul>
+            <ul class="mobile-menu-list">
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Wishlist</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">log in</a></li>
+            </ul>
+            <div class="mobile-menu">
+                <i class="fas fa-shopping-cart menu-cart" aria-hidden="true"><span>1</span></i>
+                <i class="fas fa-bars fa-2x menu-list" aria-hidden="true"></i>
+            </div>
+        </div>
+        </div>
       </div>
+    </div>
+    
+</div>
+
+
+
+
+
+
+
+
     <script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
