--- a/index.html
+++ b/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="無與倫比的香水">
-    <meta property="og:title" content="香水電商">
-    <meta property="og:image" content="/favicon.ico">
-    <meta property="og:description" content="無與倫比的香水">
-    <title>香水電商</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="scss/all.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="無與倫比的香水">
+  <meta property="og:title" content="香水電商">
+  <meta property="og:image" content="/favicon.ico">
+  <meta property="og:description" content="無與倫比的香水">
+  <title>香水電商</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="scss/all.css">
+
+  <script language="JavaScript" type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script language="JavaScript" type="text/javascript" src="js/all.js"></script>
 </head>
+
 <body>
   <div class="header">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="hd_container d-flex justify-content-between align-items-center">
-            <h1 class="mb-0"><a href="index.html"><img src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a></h1>
-            <ul class="list-unstyled pc-menu d-flex justify-content-between align-items-center mb-0">
-                <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
-                <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
-                <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
-                <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
+          <div class="hd_container d-flex justify-content-between">
+            <h1><a href="index.html"><img
+                  src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a>
+            </h1>
+            <ul class="pc-menu list-unstyled">
+              <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
+              <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
+              <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
+              <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
             </ul>
-            <ul class="mobile-menu-list">
-                <li><a href="#">Product</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">log in</a></li>
+            <ul class="list-unstyled mobile-menu-list">
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Wishlist</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">log in</a></li>
             </ul>
-            <div class="mobile-menu">
-                <i class="fas fa-shopping-cart menu-cart" aria-hidden="true"><span>1</span></i>
-                <i class="fas fa-bars fa-2x menu-list" aria-hidden="true"></i>
+            <div class="mobile-menu menu-cart">
+              <i class="material-icons cart-icon">
+                shopping_cart
+              </i>
+              <span>1</span>
+              <i class="menu-list fas fa-bars fa-2x "></i>
             </div>
-        </div>
+          </div>
         </div>
       </div>
     </div>
-    
-</div>
+
+  </div>
 
 
 
@@ -51,10 +63,14 @@
 
 
 
-    <script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/fab3685082.js" crossorigin="anonymous"></script> 
-    <script language="JavaScript" type="text/javascript" src="js/all.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous">
+  </script>
+  <script src="https://kit.fontawesome.com/fab3685082.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
