--- a/index.html
+++ b/index.html
@@ -23,39 +23,121 @@
 <body>
   <div class="header">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="hd_container d-flex justify-content-between">
-            <h1><a href="index.html"><img
-                  src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a>
-            </h1>
-            <ul class="pc-menu list-unstyled">
-              <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
-              <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
-              <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
-              <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
-            </ul>
-            <ul class="list-unstyled mobile-menu-list">
-              <li><a href="#">Product</a></li>
-              <li><a href="#">Wishlist</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">log in</a></li>
-            </ul>
-            <div class="mobile-menu menu-cart">
-              <i class="material-icons cart-icon">
-                shopping_cart
-              </i>
-              <span>1</span>
-              <i class="menu-list fas fa-bars fa-2x "></i>
-            </div>
-          </div>
+      <div class="hd_container d-flex justify-content-between">
+        <h1 class="mb-0"><a href="index.html"><img
+              src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a>
+        </h1>
+        <ul class="pc-menu list-unstyled mb-0">
+          <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
+          <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
+          <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
+          <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
+        </ul>
+        <ul class="list-unstyled mobile-menu-list">
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Wishlist</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">log in</a></li>
+        </ul>
+        <div class="mobile-menu">
+          <i class="material-icons cart-icon">
+            shopping_cart
+          </i>
+          <span>1</span>
+          <i class="menu-list fas fa-bars fa-2x ms-4"></i>
         </div>
       </div>
     </div>
 
   </div>
-
+  <div class="banner d-flex align-items-center">
+    <div class="container">
+      <div class="row d-flex justify-content-end align-items-center">
+        <div class="col-md-5">
+          <div class="description">
+            <h2>Perfume your day</h2>
+            <p>A perfume is like a piece of clothing, a message, a way of presenting oneself a costume that
+              according to the person who wears it.</p>
+            <div class="row">
+              <a href="#">Shop now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="content">
+    <div class="container">
+      <div class="row g-0 flex-column-reverse flex-md-row mb-4 mb-md-0">
+        <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
+          <div class="text">
+            <h2 class="mb-0">Gabrielle CHANEL</h2>
+            <p class="mb-2 mb-md-3">
+              全新嗅覺體驗，花香四溢、明亮馥郁。<br>結合茉莉、依蘭依蘭、橙花和最迷人的<br>格拉斯晚香玉之花香，呈現出夢幻花香<br>氣息。極具女性特質的香奈兒嘉柏麗香<br>水，專為光芒四射的她而生。</p>
+            <a href="#">查看更多</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index2.jpg" alt="">
+        </div>
+      </div>
+      <div class="row g-0 mb-4 mb-md-0">
+        <div class="col-md-6">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index3.png" alt="">
+        </div>
+        <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
+          <div class="text">
+            <h2 class="mb-0">Five O’clock Au Gingembre</h2>
+            <p class="mb-2 mb-md-3">
+              生薑與溫醇的肉桂香、紅糖的香甜摻和<br>成一氣，溫暖微辛的氣息反倒形成一股<br>輕煙氤氳開來，還帶點微微煙醺感漫溢<br>在整個鼻息之間，細聞之下,又還有溫溫<br>淡淡的木香，溫和而暖心。</p>
+            <a href="#">查看更多</a>
+          </div>
+        </div>
+      </div>
+      <div class="row g-0 flex-column-reverse flex-md-row mb-4 mb-md-0">
+        <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
+          <div class="text">
+            <h2 class="mb-0">CHANEL N°5</h2>
+            <p class="mb-2 mb-md-3">N°5，女性魅力的極致精髓。散發柔美<br>澄透的乙醛花束香氣。經典傳奇香氛，<br>蘊藏於極簡設計的獨特瓶身。</p>
+            <a href="#">查看更多</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index4.jpg" alt="">
+        </div>
+      </div>
+      <div class="row g-0 mb-4 mb-md-0">
+        <div class="col-md-6 long">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index5.jpg" alt="">
+        </div>
+        <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
+          <div class="text long">
+            <ul class="list-unstyled">
+              <li>
+                <h2 class="mb-0">1. <br>Levels of Preventive Maintenance Compliance</h2>
+                <p class="mb-2 mb-md-3">The core idea of preventative maintenance is the performance of proactive
+                  actions against unscheduled downtime in order to identify potential defects before they evolve into
+                  something more severe.</p>
+              </li>
+              <li>
+                <h2 class="mb-0">2. <br>Percentage of Planned Maintenance</h2>
+                <p class="mb-2 mb-md-3">The planned maintenance percentage is the total planned maintenance time in your
+                  CMMS software over a date range over the total number of hours of a service performed by the
+                  technicians.</p>
+              </li>
+              <li>
+                <h2 class="mb-0">3. <br>Critical percentage of planned maintenance</h2>
+                <p class="mb-2 mb-md-3">Calculating the critical percentage of planned maintenance will help you
+                  prioritize the most important operations that should be performed immediately.</p>
+              </li>
+            </ul>
+            <a href="#" class="content-btn">Plan a free online training</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
