--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
   <div class="banner d-flex align-items-center">
     <div class="container">
       <div class="row d-flex justify-content-end align-items-center">
-        <div class="col-md-5">
+        <div class="col-lg-5 col-sm-10">
           <div class="description">
             <h2>Perfume your day</h2>
             <p>A perfume is like a piece of clothing, a message, a way of presenting oneself a costume that
               according to the person who wears it.</p>
-            <div class="row">
-              <a href="#">Shop now</a>
-            </div>
+            <a href="#">Shop now</a>
           </div>
         </div>
       </div>
@@ -73,46 +71,46 @@
         <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
           <div class="text">
             <h2 class="mb-0">Gabrielle CHANEL</h2>
-            <p class="mb-2 mb-md-3">
-              全新嗅覺體驗，花香四溢、明亮馥郁。<br>結合茉莉、依蘭依蘭、橙花和最迷人的<br>格拉斯晚香玉之花香，呈現出夢幻花香<br>氣息。極具女性特質的香奈兒嘉柏麗香<br>水，專為光芒四射的她而生。</p>
+            <p class="mb-2 mb-md-3 pe-2">
+              全新嗅覺體驗，花香四溢、明亮馥郁。結合茉莉、依蘭依蘭、橙花和最迷人的格拉斯晚香玉之花香，呈現出夢幻花香氣息。極具女性特質的香奈兒嘉柏麗香水，專為光芒四射的她而生。</p>
             <a href="#">查看更多</a>
           </div>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid mb-2 mb-md-0" src="img/index2.jpg" alt="">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index2.jpg" alt="香水1">
         </div>
       </div>
       <div class="row g-0 mb-4 mb-md-0">
         <div class="col-md-6">
-          <img class="img-fluid mb-2 mb-md-0" src="img/index3.png" alt="">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index3.png" alt="香水2">
         </div>
         <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
-          <div class="text">
+          <div class="text ms-2">
             <h2 class="mb-0">Five O’clock Au Gingembre</h2>
             <p class="mb-2 mb-md-3">
-              生薑與溫醇的肉桂香、紅糖的香甜摻和<br>成一氣，溫暖微辛的氣息反倒形成一股<br>輕煙氤氳開來，還帶點微微煙醺感漫溢<br>在整個鼻息之間，細聞之下,又還有溫溫<br>淡淡的木香，溫和而暖心。</p>
+              生薑與溫醇的肉桂香、紅糖的香甜摻和成一氣，溫暖微辛的氣息反倒形成一股輕煙氤氳開來，還帶點微微煙醺感漫溢在整個鼻息之間，細聞之下,又還有溫溫淡淡的木香，溫和而暖心。</p>
             <a href="#">查看更多</a>
           </div>
         </div>
       </div>
       <div class="row g-0 flex-column-reverse flex-md-row mb-4 mb-md-0">
         <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
-          <div class="text">
+          <div class="text pe-2">
             <h2 class="mb-0">CHANEL N°5</h2>
-            <p class="mb-2 mb-md-3">N°5，女性魅力的極致精髓。散發柔美<br>澄透的乙醛花束香氣。經典傳奇香氛，<br>蘊藏於極簡設計的獨特瓶身。</p>
+            <p class="mb-2 mb-md-3">N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。</p>
             <a href="#">查看更多</a>
           </div>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid mb-2 mb-md-0" src="img/index4.jpg" alt="">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index4.jpg" alt="香水3">
         </div>
       </div>
       <div class="row g-0 mb-4 mb-md-0">
         <div class="col-md-6 long">
-          <img class="img-fluid mb-2 mb-md-0" src="img/index5.jpg" alt="">
+          <img class="img-fluid mb-2 mb-md-0" src="img/index5.jpg" alt="香水4">
         </div>
         <div class="col-md-6 d-flex align-items-md-center justify-content-md-center">
-          <div class="text long">
+          <div class="text long ps-2">
             <ul class="list-unstyled">
               <li>
                 <h2 class="mb-0">1. <br>Levels of Preventive Maintenance Compliance</h2>
@@ -138,7 +136,85 @@
       </div>
     </div>
   </div>
-
+  <div class="product pt-5 pb-3 pb-md-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4 mb-md-0 d-flex flex-column justify-content-between">
+          <div class="pro-t">
+            <a href="#"><img src="img/index6.jpg" alt="產品1"></a>
+            <h3>Poppy & Barley</h3>
+            <h5 class="mb-1 mb-md-4">Jo Malone</h5>
+          </div>
+          <p>NT$1,380<span>NT$1,580</span></p>
+        </div>
+        <div class="col-md-4 mb-4 mb-md-0  d-flex flex-column justify-content-between">
+          <div class="pro-t">
+            <a href="#"><img src="img/index7.jpg" alt="產品2"></a>
+            <h3>Body Wash</h3>
+            <h5 class="mb-1 mb-md-4">Curology</h5>
+          </div>
+          <p>NT$1,580</p>
+        </div>
+        <div class="col-md-4 mb-4 mb-md-0  d-flex flex-column justify-content-between">
+          <div class="pro-t">
+            <a href="#" class="sold">
+              <div class="sold-out">
+                <h4>Sold out</h4>
+              </div><img src="img/index8.jpg" alt="產品3">
+            </a>
+            <h3>Apple Cider Vinegar Capsule</h3>
+            <h5 class="mb-1 mb-md-4">Tonik</h5>
+          </div>
+          <p>NT$1,580</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="feature mt-5 mb-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-8">
+          <div class="ad mb-2 mb-md-0"></div>
+        </div>
+        <div class="col-md-4 text">
+          <h3>Bottle-Recycling</h3>
+          <h4>Recycle your used empty bottles and be rewarded!</h4>
+          <p class="mt-2 mb-2 mt-md-3 mb-md-3">For the past 10 years, we have collected over 800,000 bottles through
+            Empty Bottle Recycling Campaign and
+            planted more than 860 pine trees for a better environment.For the past 10 years, we have collected over
+            800,000 bottles through Empty Bottle Recycling Campaign and planted more than 860 pine trees for a
+            better environment.</p>
+          <a href="#">查看更多</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-banner d-flex align-items-end">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-6">
+          <h2>記得<br />訂閱以獲取更多資訊！</h2>
+          <div class="contact">
+            <input type="text" placeholder="Your email address">
+            <button type="submit">Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="container d-flex justify-content-between align-items-center ft-logo">
+      <div class="d-flex align-items-center">
+        <h2 class="mb-0"><a href="index.html"><img src="img/dPerfumewhite.png" alt="logo"></a></h2>
+        <p class="mb-0 ms-md-3 ms-4">© 2020. All Rights Reserved.</p>
+      </div>
+      <ul class="list-unstyled d-md-flex mb-0 d-none ">
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </div>
 
 
 
