--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h1>
         <ul class="pc-menu list-unstyled mb-0">
           <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
-          <li><a href="#"><i class="fas fa-user"></i>log in</a></li>
+          <li><a href="login.html"><i class="fas fa-user"></i>log in</a></li>
           <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
           <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
         </ul>
@@ -38,7 +38,7 @@
           <li><a href="#">Wishlist</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">log in</a></li>
+          <li><a href="login.html">log in</a></li>
         </ul>
         <div class="mobile-menu">
           <i class="material-icons cart-icon">
@@ -216,19 +216,7 @@
     </div>
   </div>
 
-
-
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous">
-  </script>
-  <script src="https://kit.fontawesome.com/fab3685082.js" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
