--- a/product-2.html
+++ b/product-2.html
@@ -50,7 +50,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <div class="thin-banner">
         <div class="container">
@@ -64,29 +63,53 @@
             </ul>
         </div>
     </div>
-    <div class="login">
+    <div class="pro-content">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8 mb-4 mb-md-0">
-                    <div class="login-img"></div>
+            <div class="row">
+                <div class="col-md-8">
+                    <img class="mb-md-4 mb-3" src="img/product1.jpg" alt="product-t1">
+                    <div class="row d-md-flex d-none">
+                        <div class="col-md-6"><img src="img/product2.jpg" alt="product-2"></div>
+                        <div class="col-md-6"><img src="img/product3.jpg" alt="product-3"></div>
+                    </div>
+                    <img class="mt-md-4 d-md-flex d-none" src="img/product1.jpg" alt="product-b1">
                 </div>
                 <div class="col-md-4">
-                    <h2 class="mb-3">Log In</h2>
-                    <label for="email" class="form-label">帳號</label>
-                    <input type="email" class="form-control mb-3" id="account" placeholder="email@example.com">
-                    <label for="password" class="form-label">密碼</label>
-                    <input type="password" class="form-control" id="password" placeholder="password">
-                    <div class="d-flex justify-content-between mt-5 mt-md-4">
-                        <a href="#">忘記密碼</a>
-                        <div class="login-btn">
-                            <a class="btn btn-outline-primary" href="#" role="button">註冊</a>
-                            <button class="btn btn-primary" type="submit">登入</button>
+                    <div class="main-text">
+                        <h2>CHANEL N°5</h2>
+                        <h5 class="mb-4">N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。</h5>
+                        <p class="mt-md-3">NT$4,980</p>
+                        <div class="input-group mb-2">
+                            <input type="text" class="form-control num" value="1" name="quantity">
+                            <div class="btn-group-vertical btn-group-sm num-control">
+                                <button type="button" class="btn btn-sm pb-0 pt-0" id="plus"><i
+                                        class="fas fa-caret-up fa-sm"></i></button>
+                                <button type="button" class="btn btn-sm pb-0 pt-0" id="minus"><i
+                                        class="fas fa-caret-down fa-sm"></i></button>
+                            </div>
+                            <button class="btn btn-primary pe-5 ps-5" type="button" id="button-addon2">加入購物車</button>
                         </div>
+                        <a href="#">
+                            <p class="d-flex align-items-center">
+                                <span class="material-icons">favorite</span>加入我的收藏</p>
+                        </a>
                     </div>
+                    <div class="buyinfo">
+                        <h4 class="mb-2">商品購買須知</h4>
+                        <p class="mb-4">產品因拍攝關係顏色可能略有差異，實際以廠商出貨為主。商品情境照為示意用，僅商品主體不包含其他配件，請以規格內容物為主。 D’Perfume 盡可能確保所列商品備貨充足，但偶爾仍會有產品售罄的情況。如您所訂購的商品庫存不足，我們將盡快以電子郵件通知您。任何訂單變動均會在訂單總額與出貨訊息內更新。</p>
+                        <h4 class="mb-2">退換貨須知</h4>
+                        <p>依《消費者保護法》的規定，於全站購物皆享有商品到貨【七日猶豫期】（含例假日）之權益。若收到的商品有任何問題，可於猶豫期內申請退貨。</p>
+                    </div>
+                </div>
+                <div class="d-block d-md-none">
+                    <img class="mb-3" src="img/product2.jpg" alt="product-2">
+                    <img class="mb-3" src="img/product3.jpg" alt="product-3">
+                    <img class="mt-md-4" src="img/product1-mob.jpg" alt="product-b1">
                 </div>
             </div>
         </div>
     </div>
+
     <div class="footer">
         <div class="container d-flex justify-content-between align-items-center ft-logo">
             <div class="d-flex align-items-center">
