--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
               src="https://hexschool.github.io/webLayoutTraining1st/perfume-week6/d’Perfume.png" alt="logo"></a>
         </h1>
         <ul class="pc-menu list-unstyled mb-0">
-          <li><a href="#"><i class="fas fa-store-alt"></i>Product</a></li>
+          <li><a href="product.html"><i class="fas fa-store-alt"></i>Product</a></li>
           <li><a href="login.html"><i class="fas fa-user"></i>log in</a></li>
           <li><a href="#"><i class="fas fa-heart"></i>Wishlist</a></li>
           <li><a href="#"><i class="fas fa-heart"></i>Cart(3)</a></li>
         </ul>
         <ul class="list-unstyled mobile-menu-list">
-          <li><a href="#">Product</a></li>
+          <li><a href="product.html">Product</a></li>
           <li><a href="#">Wishlist</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
