--- a/product.html
+++ b/product.html
@@ -70,9 +70,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products1.jpg"
                                 alt="product1"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -111,9 +111,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products2.jpg"
                                 alt="product2"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -132,9 +132,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products3.jpg"
                                 alt="product3"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -153,9 +153,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products4.jpg"
                                 alt="product4"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -174,9 +174,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products5.jpg"
                                 alt="product5"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -195,9 +195,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products6.jpg"
                                 alt="product6"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -216,9 +216,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products7.jpg"
                                 alt="product7"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -237,9 +237,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products8.jpg"
                                 alt="product8"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -258,9 +258,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products9.png"
                                 alt="product9"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -279,9 +279,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products10.jpg"
                                 alt="product10"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380<span>NT$1,580</span></p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -300,9 +300,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products11.jpg"
                                 alt="product11"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
@@ -321,9 +321,9 @@
                     <div class="pro">
                         <a href="product-2.html" class="pro-link"><img class="img-fluid" src="img/products12.jpg"
                                 alt="product12"></a>
-                        <h3 class="mb-0">Body Wash</h3>
-                        <p class="mb-0">Curology</p>
-                        <p class="mb-0">NT$1,580</p>
+                        <h3 class="mb-0 mt-1">Poppy & Barley</h3>
+                        <p class="mb-0">Jo Malone</p>
+                        <p class="mb-0">NT$1,380</p>
                         <button type="button" class="btn btn-link btn-sm p-0 add-btn" data-bs-toggle="modal"
                             data-bs-target="#addWishlist">
                             <span class="material-icons">
